@@ -1,4 +1,5 @@
 0.11
+ - Update Module::Install to 1.21 version.
 
 0.10 2023-01-09T11:38:05+01:00
  - Add test messages.
